--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,6 @@
     <string name="ok_button">OK</string>
     <string name="call_button">CALL</string>
     <string name="directions_button">DIRECTIONS</string>
-    <string name="unknown_distance">Unknown</string>
+    <string name="unknown_distance">Unknown Distance</string>
 
 </resources>
